# dotfiles

./: .amethyst.yml  .atcodertools.toml  .chunkwmrc  .dtlignore  .gitconfig  .gitignore  .gitmodules  .hyper.js  .ideavimrc  .mackup.cfg  .neoconf.json  .skhdrc  .tigrc  .tmux.conf  .vimrc  .yabairc  .zshenv  Makefile  cspell.yaml  lefthook.toml  lefthook.yaml  link.sh
.config/nvim/denops/@ddc-sources/sekken/: Cargo.toml  Makefile  flake.nix
.config/nvim/denops/@ddc-sources/sekken/core/: Cargo.toml
.config/nvim/denops/@ddc-sources/sekken/core/src/: kana.rs  lib.rs  sekken.rs  util.rs  viterbi.rs
.config/nvim/denops/@ddc-sources/sekken/make-model/: Cargo.toml
.config/nvim/denops/@ddc-sources/sekken/make-model/src/: main.rs
.config/nvim/denops/@ddc-sources/sekken/model/: Cargo.toml
.config/nvim/denops/@ddc-sources/sekken/model/src/: compact.rs  compact_capnp.rs  lib.rs  normal.rs
.config/nvim/denops/@ddc-sources/sekken/pkg/: sekken.d.ts  sekken.js  sekken_bg.wasm  sekken_bg.wasm.d.ts
.config/nvim/denops/@ddc-sources/sekken/poc/: Cargo.toml
.config/nvim/denops/@ddc-sources/sekken/poc/src/: main.rs
.config/nvim/denops/@ddc-sources/sekken/src/: dictionary.rs  kana.rs  lib.rs  sekken.rs
.config/nvim/denops/@ddc-sources/sekken/src/kana/: table.rs
.config/nvim/denops/@ddc-sources/sekken/wasm/: Cargo.toml
.config/nvim/denops/@ddc-sources/sekken/wasm/pkg/: sekken_wasm.d.ts  sekken_wasm.js  sekken_wasm_bg.wasm  sekken_wasm_bg.wasm.d.ts
.config/nvim/denops/@ddc-sources/sekken/wasm/src/: kana.rs  lib.rs  sekken.rs
.config/nvim/denops/sekken/sekken-rs/model/: Cargo.toml
.config/nvim/denops/sekken/sekken-rs/model/src/: compact.capnp  compact.rs  compact_capnp.rs  normal.rs
.config/nvim/denops/sekken/sekken-rs/wasm/: Cargo.toml
(+545 files in other folders)
