[package]
name = "sekken-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
daachorse = "1.0.0"
serde = { version = "1.0.193", features = ["derive"] }
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"
sekken-model = { path = "../model" }

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
