[package]
name = "sekken-model"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.75"
capnp = "0.18.9"
rmp-serde = "1.1.2"
ruzstd = { version = "0.5.0", optional = true }
serde = { version = "1.0.193", features = ["derive"] }
zstd = { version = "0.13.0", optional = true }

[features]
wasm = ["load"]
load = ["dep:ruzstd"]
save = ["dep:zstd"]
