[package]
name = "sekken-wasm"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
console_error_panic_hook = "0.1.7"
serde-wasm-bindgen = "0.6.1"
wasm-bindgen = "0.2.88"
sekken-model = { path = "../model", features = ["wasm"] }
sekken-core = { path = "../core" }
anyhow = "1.0.76"

[dev-dependencies]
wasm-bindgen-test = "0.3.38"
